--- a/solution/Pomodoro/PomodoroGUI/MainWindow.xaml
+++ b/solution/Pomodoro/PomodoroGUI/MainWindow.xaml
@@ -2,8 +2,13 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:views="clr-namespace:PomodoroGUI.Views"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Pomodoro" Height="400" Width="432" ResizeMode="NoResize">
     <Grid>
-        <views:PomodoroTimerView/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+        </Grid.RowDefinitions>
+        <views:PomodoroTimerView Grid.Row="0" HorizontalAlignment="Left"/>
+        <views:EntryView Grid.Row="1"/>
     </Grid>
 </Window>
