--- a/solution/Pomodoro/PomodoroGUI/MainWindow.xaml
+++ b/solution/Pomodoro/PomodoroGUI/MainWindow.xaml
@@ -2,13 +2,31 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:views="clr-namespace:PomodoroGUI.Views"
-        Title="Pomodoro" Height="400" Width="432" ResizeMode="NoResize">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-        </Grid.RowDefinitions>
-        <views:PomodoroTimerView Grid.Row="0" HorizontalAlignment="Left"/>
-        <views:EntryView Grid.Row="1"/>
-    </Grid>
+        Title="Pomodoro" Height="420" Width="432" ResizeMode="CanResize">
+
+    <TabControl HorizontalAlignment="Left" VerticalAlignment="Stretch">
+        <TabItem Header="Main">
+            <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+            </Grid.RowDefinitions>
+            <views:PomodoroTimerView Grid.Row="0" HorizontalAlignment="Left"/>
+            <views:NewEntryView Grid.Row="1"/>
+            </Grid>
+        </TabItem>
+        <TabItem Header="Log">
+            <Grid>
+                <DockPanel LastChildFill="False">
+                    <ListView DockPanel.Dock="Left" ItemsSource="{Binding Path=EntryList}">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <views:EntryView/>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </DockPanel>
+            </Grid>
+        </TabItem>
+    </TabControl>
 </Window>
