--- a/solution/Pomodoro/PomodoroGUI/Views/EntryView.xaml
+++ b/solution/Pomodoro/PomodoroGUI/Views/EntryView.xaml
@@ -6,18 +6,27 @@
         xmlns:ignore="http://www.ignore.com"
         mc:Ignorable="d ignore">
 
-    <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-        </Grid.RowDefinitions>
-        <Label Content="Description:" HorizontalAlignment="Center" VerticalAlignment="Center" Width="400" Height="28" Grid.Row="0" Margin="0,5,5,0"/>
-        <TextBox Text="{Binding DescriptionBoxValue}" HorizontalAlignment="Center" VerticalAlignment="Center" Width="400" Height="112" TextWrapping="Wrap" Grid.Row="1" Margin="5,0,5,5" IsEnabled="{Binding DescriptionBoxEnabled}"/>
-        <Label Content="Tags:" HorizontalAlignment="Center" VerticalAlignment="Center" Width="400" Height="28" Grid.Row="2" Margin="0,5,5,0"/>
-        <TextBox Text="{Binding TagsBoxValue}" HorizontalAlignment="Center" VerticalAlignment="Center" Width="400" Height="56" Grid.Row="3" Margin="5,0,5,5" IsEnabled="{Binding TagsBoxEnabled}"/>
-        <Button Content="Save" HorizontalAlignment="Right" Grid.Row="4" VerticalAlignment="Center" Width="75" Margin="5,5,5,5" Command="{Binding SaveNewEntryCommand}" IsEnabled="{Binding SaveNewEntryEnabled}"/>
-    </Grid>
+    <Border BorderThickness="1" CornerRadius="5"  Padding="5,2,5,2" BorderBrush="Black">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Label Content="Id:" Grid.Column="0" Width="30"/>
+            <Label Content="{Binding Path=EntryId, Mode=OneWay}" Grid.Column="1" Width="40"/>
+            <Label Content="Timestamp:" Grid.Column="2" Width="70"/>
+            <Label Content="{Binding Path=EntryTimestamp, Mode=OneWay}" Grid.Column="3" Width="140"/>
+            <Label Content="Description:" Grid.Column="4" Width="80"/>
+            <TextBox Text="{Binding Path=EntryDescription, Mode=TwoWay}" Grid.Column="5" Width="200"/>
+            <!--<Label Content="Tags:" Grid.Column="6"  Width="40"/>
+            <Label Content="{Binding Path=EntryTags, Mode=OneWay}" Grid.Column="7"  Width="200"/>-->
+        </Grid>
+    </Border>
 </UserControl>
+        
