--- a/solution/Pomodoro/PomodoroGUI/MainWindow.xaml
+++ b/solution/Pomodoro/PomodoroGUI/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:views="clr-namespace:PomodoroGUI.Views"
-        Title="Pomodoro" Height="420" Width="432" ResizeMode="CanResize">
+        Title="Pomodoro" Height="420" Width="432" ResizeMode="CanMinimize">
 
     <TabControl HorizontalAlignment="Left" VerticalAlignment="Stretch">
         <TabItem Header="Main">
