--- a/solution/Pomodoro/PomodoroGUI/Views/EntryView.xaml
+++ b/solution/Pomodoro/PomodoroGUI/Views/EntryView.xaml
@@ -6,26 +6,49 @@
         xmlns:ignore="http://www.ignore.com"
         mc:Ignorable="d ignore">
 
-    <Border BorderThickness="1" CornerRadius="5"  Padding="5,2,5,2" BorderBrush="Black">
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            <Label Content="Id:" Grid.Column="0" Width="30"/>
-            <Label Content="{Binding Path=EntryId, Mode=OneWay}" Grid.Column="1" Width="40"/>
-            <Label Content="Timestamp:" Grid.Column="2" Width="70"/>
-            <Label Content="{Binding Path=EntryTimestamp, Mode=OneWay}" Grid.Column="3" Width="140"/>
-            <Label Content="Description:" Grid.Column="4" Width="80"/>
-            <TextBox Text="{Binding Path=EntryDescription, Mode=TwoWay}" Grid.Column="5" Width="200"/>
-            <Label Content="Tags:" Grid.Column="6"  Width="40"/>
-            <Label Content="{Binding Path=EntryTags, Mode=OneWay}" Grid.Column="7"  Width="200"/>
+    <Border BorderThickness="1" CornerRadius="5" Padding="1,1,1,1" BorderBrush="DarkBlue">
+        <Grid Margin="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+            </Grid.RowDefinitions>
+
+            <Grid Grid.Row="0" Margin="-1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Label Content="Id:" Grid.Column="0" Width="30" FontSize="12"/>
+                <Label Content="{Binding Path=EntryId, Mode=OneWay}" Grid.Column="1" Width="40" FontSize="12"/>
+                <Label Content="Timestamp:" Grid.Column="2" Width="70" FontSize="12"/>
+                <Label Content="{Binding Path=EntryTimestamp, Mode=OneWay}" Grid.Column="3" Width="140" FontSize="12"/>
+            </Grid>
+
+            <Grid Grid.Row="1" Margin="-1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Label Content="Description:" Grid.Column="0" Width="80" FontSize="12"/>
+                <TextBox Text="{Binding Path=EntryDescription, Mode=TwoWay}" Grid.Column="1" Width="285" FontSize="12" HorizontalAlignment="Left" VerticalAlignment="Center" BorderBrush="AliceBlue" BorderThickness="1" TextWrapping="Wrap"/>
+
+            </Grid>
+
+
+            <Grid Grid.Row="2" Margin="-1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Label Content="Tags:" Grid.Column="0" Width="40" FontSize="12"/>
+                <Label Content="{Binding Path=EntryTags, Mode=OneWay}" Grid.Column="1" Width="285" FontSize="12" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            </Grid>
+
         </Grid>
     </Border>
 </UserControl>
