--- a/solution/Pomodoro/PomodoroGUI/Views/OptimisticView.xaml
+++ b/solution/Pomodoro/PomodoroGUI/Views/OptimisticView.xaml
@@ -1,20 +1,19 @@
 ﻿<Window x:Class="PomodoroGUI.Views.OptimisticView"
+        x:Name="OptimisticWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:views="clr-namespace:PomodoroGUI.Views"
-        Title="OptimisticView" Height="100" Width="330">
+        Title="The entry is already modified! :(" Height="100" Width="330">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"></ColumnDefinition>
             <ColumnDefinition Width="Auto"></ColumnDefinition>
             <ColumnDefinition Width="Auto"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        
-        <Button Grid.Column="0" Width="64" Height="32" Margin="10,10,10,10" FontSize="18" Command="{Binding OptimisticUserCommand}">User</Button>
-        <Button Grid.Column="1" Width="128" Height="32" Margin="10,10,10,10" FontSize="18" Command="{Binding OptimisticOtherUserCommand}">Other User</Button>
-        <Button Grid.Column="2" Width="64" Height="32" Margin="10,10,10,10" FontSize="18" Command="{Binding OptimisticServerCommand}">Server</Button>
 
-
+        <Button Grid.Column="0" Width="64" Height="32" Margin="10,10,10,10" FontSize="18" Command="{Binding OptimisticUserCommand}" CommandParameter="{Binding ElementName=OptimisticWindow}">User</Button>
+        <Button Grid.Column="1" Width="128" Height="32" Margin="10,10,10,10" FontSize="18" Command="{Binding OptimisticOtherUserCommand}" CommandParameter="{Binding ElementName=OptimisticWindow}">Other User</Button>
+        <Button Grid.Column="2" Width="64" Height="32" Margin="10,10,10,10" FontSize="18" Command="{Binding OptimisticServerCommand}" CommandParameter="{Binding ElementName=OptimisticWindow}">Server</Button>
 
     </Grid>
 </Window>
